--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #4d02ec; }
+  background: #5ee847; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #3c10e0; }
+  background: #e2bd6c; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #c69b4b; }
+  background: #b7a6bc; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #084f47; }
+  background: #e709db; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #3a4aeb; }
+  background: #015b78; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #dbef4a; }
+  background: #75a81c; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #0c602a; }
+  background: #3ac1cf; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #a0f434; }
+  background: #6e6de5; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #f967bd; }
+  background: #288471; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #502381; }
+  background: #f6f5b8; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #36f34b; }
+  background: #9dd452; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #a8c5dd; }
+  background: #b27e73; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #9862a0; }
+  background: #a7417a; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #a12479; }
+  background: #5477c2; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #b64945; }
+  background: #3714dc; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #b3d33f; }
+  background: #5bf735; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #264fcd; }
+  background: #be54dd; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #86fec6; }
+  background: #bdd0f4; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #9982ec; }
+  background: #f782a0; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #1c35b1; }
+  background: #a5f25c; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #c49675; }
+  background: #6d3fd6; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #21db66; }
+  background: #dbd315; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #c6bcd9; }
+  background: #7aeb57; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #52276c; }
+  background: #5f0966; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #db46db; }
+  background: #8e8a6e; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #c5089e; }
+  background: #1baa2a; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #b284c3; }
+  background: #f7a776; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #a3e071; }
+  background: #b2f5bf; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #c6069b; }
+  background: #8e610f; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #f3031d; }
+  background: #aec86f; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #a47fdc; }
+  background: #a7efaf; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #fa0f05; }
+  background: #7fa0ff; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #10d548; }
+  background: #47fce1; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #28ae68; }
+  background: #8c0fb3; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #402dde; }
+  background: #e83cc9; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #0f1f49; }
+  background: #b03add; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #b90fc8; }
+  background: #3da0ed; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #64cc51; }
+  background: #76d864; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #15e551; }
+  background: #2fa432; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #05dcbc; }
+  background: #cba472; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #3b099e; }
+  background: #9c4918; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #99da7c; }
+  background: #a255a7; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #f3e7bf; }
+  background: #e1e37b; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #69b242; }
+  background: #f2cbaf; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #27dbbd; }
+  background: #daf039; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #5abfe4; }
+  background: #30f0b7; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #b919de; }
+  background: #7e0348; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #812648; }
+  background: #51e71a; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #65cb82; }
+  background: #ae6333; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #1f20f1; }
+  background: #1c3886; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #554fe0; }
+  background: #8a7416; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #23269d; }
+  background: #a342d2; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #892879; }
+  background: #12efce; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #03389e; }
+  background: #b980d4; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #4f9eed; }
+  background: #d47166; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #57c4e1; }
+  background: #32a42b; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #c5ee6d; }
+  background: #3fd2d4; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #d1fb11; }
+  background: #bfef0b; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #dcfba6; }
+  background: #2d6d26; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #c9a11d; }
+  background: #963a0c; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #99880a; }
+  background: #19d236; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #7882df; }
+  background: #e8a397; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #fd1e93; }
+  background: #849d58; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #5b090e; }
+  background: #f814e8; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #49d1bb; }
+  background: #45b6ae; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #3b8bd5; }
+  background: #ccc656; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #061973; }
+  background: #b92aba; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #db2d05; }
+  background: #e1509b; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #e99ddf; }
+  background: #0205e0; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #9ae51b; }
+  background: #824521; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #9f0a4a; }
+  background: #29d477; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #282d59; }
+  background: #436ae9; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #6cfbd7; }
+  background: #da73e5; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #58962b; }
+  background: #4fda87; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #b13ade; }
+  background: #4a35bf; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #13afca; }
+  background: #246d20; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #987490; }
+  background: #e9f22f; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #fd5144; }
+  background: #62a704; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #715972; }
+  background: #4797cb; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #e39491; }
+  background: #792212; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #47c0c7; }
+  background: #647930; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #e3e1c9; }
+  background: #f8ed2d; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #b2d4eb; }
+  background: #7aac14; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #9f829d; }
+  background: #5933d1; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #3bb1d0; }
+  background: #cde233; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #6e5734; }
+  background: #d4df68; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #93e061; }
+  background: #ec5d98; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #3924b3; }
+  background: #c0f2a6; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #07bfba; }
+  background: #9c9510; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #18524e; }
+  background: #62617e; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #fad487; }
+  background: #7ec83e; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #7a5bf5; }
+  background: #098615; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #9bc7e3; }
+  background: #4c7fed; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #077767; }
+  background: #097943; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #5c0a0f; }
+  background: #e2f688; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #859f9b; }
+  background: #676d4e; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #b45f0a; }
+  background: #6b1bf7; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #e8150a; }
+  background: #bb986e; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #af824f; }
+  background: #2839ae; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #41ac92; }
+  background: #4ed745; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10400,6 +10400,15 @@ a {
 
 .graydient-primary-btn {
   background-image: linear-gradient(to right bottom, #a57dff, #9b79ff, #9076ff, #8472ff, #776fff); }
+
+.cancel-btn {
+  background: transparent;
+  color: #776fff;
+  padding: 14px 17px;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  border: 0px solid #ccc; }
+  .cancel-btn:hover {
+    text-decoration: underline; }
 
 input[type="checkbox"] {
   box-sizing: border-box;
