--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #5ee847; }
+  background: #ed9646; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #e2bd6c; }
+  background: #c1bf4a; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #b7a6bc; }
+  background: #7e657e; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #e709db; }
+  background: #d75369; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #015b78; }
+  background: #c7e7ef; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #75a81c; }
+  background: #b72a04; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #3ac1cf; }
+  background: #f824a5; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #6e6de5; }
+  background: #82f0d5; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #288471; }
+  background: #a8b11d; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #f6f5b8; }
+  background: #534ff1; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #9dd452; }
+  background: #726865; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #b27e73; }
+  background: #e036b0; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #a7417a; }
+  background: #2921cb; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #5477c2; }
+  background: #f39f2d; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #3714dc; }
+  background: #6e3bd7; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #5bf735; }
+  background: #a73832; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #be54dd; }
+  background: #53e174; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #bdd0f4; }
+  background: #38d527; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #f782a0; }
+  background: #3166ee; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #a5f25c; }
+  background: #45a78d; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #6d3fd6; }
+  background: #d12614; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #dbd315; }
+  background: #84c22b; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #7aeb57; }
+  background: #c70ca0; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #5f0966; }
+  background: #47c31d; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #8e8a6e; }
+  background: #f06e41; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #1baa2a; }
+  background: #6ffb98; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #f7a776; }
+  background: #fb917a; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #b2f5bf; }
+  background: #ddad33; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #8e610f; }
+  background: #04498e; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #aec86f; }
+  background: #db5f82; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #a7efaf; }
+  background: #c48bc1; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #7fa0ff; }
+  background: #3d2826; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #47fce1; }
+  background: #6d3f5f; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #8c0fb3; }
+  background: #4bee92; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #e83cc9; }
+  background: #1838ac; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #b03add; }
+  background: #8fdc31; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #3da0ed; }
+  background: #a27fe4; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #76d864; }
+  background: #921031; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #2fa432; }
+  background: #27f35b; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #cba472; }
+  background: #41e964; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #9c4918; }
+  background: #e723b2; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #a255a7; }
+  background: #904777; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #e1e37b; }
+  background: #e9b18b; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #f2cbaf; }
+  background: #e61c84; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #daf039; }
+  background: #efa910; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #30f0b7; }
+  background: #5a6fe8; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #7e0348; }
+  background: #bfa3c4; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #51e71a; }
+  background: #cbdab8; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #ae6333; }
+  background: #667bb8; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #1c3886; }
+  background: #e363f2; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #8a7416; }
+  background: #bc2517; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #a342d2; }
+  background: #73f649; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #12efce; }
+  background: #9344da; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #b980d4; }
+  background: #c41889; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #d47166; }
+  background: #6cb35a; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #32a42b; }
+  background: #fd6f76; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #3fd2d4; }
+  background: #85956a; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #bfef0b; }
+  background: #27ef03; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #2d6d26; }
+  background: #4843c0; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #963a0c; }
+  background: #5f1ff2; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #19d236; }
+  background: #ee8085; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #e8a397; }
+  background: #7270b7; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #849d58; }
+  background: #125d1d; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #f814e8; }
+  background: #e08682; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #45b6ae; }
+  background: #ce7438; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #ccc656; }
+  background: #de7b0c; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #b92aba; }
+  background: #11d399; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #e1509b; }
+  background: #953664; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #0205e0; }
+  background: #8fbde0; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #824521; }
+  background: #d1a2fd; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #29d477; }
+  background: #5d0902; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #436ae9; }
+  background: #b77597; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #da73e5; }
+  background: #5ea480; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #4fda87; }
+  background: #4221c5; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #4a35bf; }
+  background: #ea50bb; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #246d20; }
+  background: #1da125; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #e9f22f; }
+  background: #097fdb; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #62a704; }
+  background: #94e89b; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #4797cb; }
+  background: #53f0cb; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #792212; }
+  background: #d78671; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #647930; }
+  background: #1a7017; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #f8ed2d; }
+  background: #8cc938; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #7aac14; }
+  background: #891f89; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #5933d1; }
+  background: #b88798; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #cde233; }
+  background: #5511ee; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #d4df68; }
+  background: #99fead; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #ec5d98; }
+  background: #f8d27e; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #c0f2a6; }
+  background: #2c6975; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #9c9510; }
+  background: #1840a9; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #62617e; }
+  background: #42f7e8; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #7ec83e; }
+  background: #967136; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #098615; }
+  background: #833dc0; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #4c7fed; }
+  background: #1610ae; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #097943; }
+  background: #dda664; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #e2f688; }
+  background: #6c4e34; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #676d4e; }
+  background: #c38f7b; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #6b1bf7; }
+  background: #5fc982; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #bb986e; }
+  background: #da9204; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #2839ae; }
+  background: #29f523; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #4ed745; }
+  background: #0d4f69; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10406,9 +10406,8 @@ a {
   color: #776fff;
   padding: 14px 17px;
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  border: 0px solid #ccc; }
-  .cancel-btn:hover {
-    text-decoration: underline; }
+  border: 0px solid #ccc;
+  text-decoration: underline; }
 
 input[type="checkbox"] {
   box-sizing: border-box;
