--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #ed9646; }
+  background: #47aa13; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #c1bf4a; }
+  background: #7c76dd; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #7e657e; }
+  background: #21ee1e; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #d75369; }
+  background: #2877a1; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #c7e7ef; }
+  background: #a55532; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #b72a04; }
+  background: #d8440d; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #f824a5; }
+  background: #add6f5; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #82f0d5; }
+  background: #b45a4a; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #a8b11d; }
+  background: #f44865; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #534ff1; }
+  background: #74f8bc; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #726865; }
+  background: #713b6a; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #e036b0; }
+  background: #6b2b99; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #2921cb; }
+  background: #911a65; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #f39f2d; }
+  background: #093155; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #6e3bd7; }
+  background: #5cbfda; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #a73832; }
+  background: #539808; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #53e174; }
+  background: #46d0aa; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #38d527; }
+  background: #ef5d4b; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #3166ee; }
+  background: #d42510; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #45a78d; }
+  background: #c20e73; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #d12614; }
+  background: #d0fe1b; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #84c22b; }
+  background: #7df48a; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #c70ca0; }
+  background: #9dbdc3; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #47c31d; }
+  background: #30a542; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #f06e41; }
+  background: #b3e5f8; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #6ffb98; }
+  background: #806cda; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #fb917a; }
+  background: #200fd0; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #ddad33; }
+  background: #324e77; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #04498e; }
+  background: #3a7b8d; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #db5f82; }
+  background: #e9cf6b; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #c48bc1; }
+  background: #a28083; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #3d2826; }
+  background: #ad46fa; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #6d3f5f; }
+  background: #8ac4f7; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #4bee92; }
+  background: #afdc0a; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #1838ac; }
+  background: #8e9044; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #8fdc31; }
+  background: #58a503; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #a27fe4; }
+  background: #421629; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #921031; }
+  background: #e65135; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #27f35b; }
+  background: #4b9639; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #41e964; }
+  background: #e84f9f; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #e723b2; }
+  background: #a189f4; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #904777; }
+  background: #c57107; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #e9b18b; }
+  background: #2a07eb; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #e61c84; }
+  background: #cb4832; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #efa910; }
+  background: #1a9e0c; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #5a6fe8; }
+  background: #34ebf5; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #bfa3c4; }
+  background: #1c61da; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #cbdab8; }
+  background: #8da0d3; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #667bb8; }
+  background: #df4f29; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #e363f2; }
+  background: #faec0f; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #bc2517; }
+  background: #543793; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #73f649; }
+  background: #50c6b1; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #9344da; }
+  background: #965027; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #c41889; }
+  background: #3d09a6; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #6cb35a; }
+  background: #24fd24; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #fd6f76; }
+  background: #478c5f; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #85956a; }
+  background: #097f9f; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #27ef03; }
+  background: #9b65f2; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #4843c0; }
+  background: #ab5028; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #5f1ff2; }
+  background: #0ddd75; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #ee8085; }
+  background: #076316; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #7270b7; }
+  background: #c88f72; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #125d1d; }
+  background: #e736ae; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #e08682; }
+  background: #beae4b; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #ce7438; }
+  background: #80b134; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #de7b0c; }
+  background: #a56983; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #11d399; }
+  background: #0f21bf; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #953664; }
+  background: #69e55c; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #8fbde0; }
+  background: #dc1871; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #d1a2fd; }
+  background: #e3e3d2; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #5d0902; }
+  background: #42321c; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #b77597; }
+  background: #fad22c; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #5ea480; }
+  background: #b8ae29; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #4221c5; }
+  background: #a2e125; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #ea50bb; }
+  background: #6c0636; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #1da125; }
+  background: #92a10c; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #097fdb; }
+  background: #624438; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #94e89b; }
+  background: #7a3b45; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #53f0cb; }
+  background: #bc77b7; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #d78671; }
+  background: #80172c; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #1a7017; }
+  background: #b5dd72; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #8cc938; }
+  background: #d2e443; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #891f89; }
+  background: #fc7a9a; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #b88798; }
+  background: #3e0d7a; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #5511ee; }
+  background: #b94e9c; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #99fead; }
+  background: #48cd36; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #f8d27e; }
+  background: #4ec90d; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #2c6975; }
+  background: #bc5cc7; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #1840a9; }
+  background: #1d7bb5; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #42f7e8; }
+  background: #9cda1c; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #967136; }
+  background: #fdde4c; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #833dc0; }
+  background: #8276ab; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #1610ae; }
+  background: #3facfc; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #dda664; }
+  background: #2fc337; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #6c4e34; }
+  background: #ed1c82; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #c38f7b; }
+  background: #9b0fcd; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #5fc982; }
+  background: #eb899e; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #da9204; }
+  background: #1b9d42; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #29f523; }
+  background: #25392e; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #0d4f69; }
+  background: #828a78; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12508,6 +12508,10 @@ td .check-container {
   text-decoration: none;
   color: #5f5f5f;
   margin-right: 10px; }
+
+.field-section {
+  background-color: #f4f4f4;
+  padding: 20px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
