--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #47aa13; }
+  background: #b81ef5; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #7c76dd; }
+  background: #66f82f; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #21ee1e; }
+  background: #fb3455; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #2877a1; }
+  background: #267c64; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #a55532; }
+  background: #8342f5; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #d8440d; }
+  background: #cabc1d; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #add6f5; }
+  background: #28bb6a; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #b45a4a; }
+  background: #6b217b; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #f44865; }
+  background: #4a8717; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #74f8bc; }
+  background: #bf1af9; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #713b6a; }
+  background: #ba76b4; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #6b2b99; }
+  background: #a1d77e; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #911a65; }
+  background: #b19c4f; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #093155; }
+  background: #ac599f; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #5cbfda; }
+  background: #cfd6e3; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #539808; }
+  background: #1b8269; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #46d0aa; }
+  background: #60fed6; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #ef5d4b; }
+  background: #012276; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #d42510; }
+  background: #0edb53; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #c20e73; }
+  background: #275dda; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #d0fe1b; }
+  background: #b0be43; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #7df48a; }
+  background: #0aea0a; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #9dbdc3; }
+  background: #936e50; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #30a542; }
+  background: #d5df5a; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #b3e5f8; }
+  background: #8cf199; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #806cda; }
+  background: #603a9d; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #200fd0; }
+  background: #8ce65e; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #324e77; }
+  background: #52ae73; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #3a7b8d; }
+  background: #115c3d; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #e9cf6b; }
+  background: #a857b3; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #a28083; }
+  background: #4a0bad; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #ad46fa; }
+  background: #6391f4; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #8ac4f7; }
+  background: #473cda; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #afdc0a; }
+  background: #4d70c4; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #8e9044; }
+  background: #0b24e8; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #58a503; }
+  background: #ce475e; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #421629; }
+  background: #6640ab; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #e65135; }
+  background: #92a634; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #4b9639; }
+  background: #ee4a36; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #e84f9f; }
+  background: #297840; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #a189f4; }
+  background: #d83352; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #c57107; }
+  background: #93a14f; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #2a07eb; }
+  background: #fb0827; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #cb4832; }
+  background: #1c9640; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #1a9e0c; }
+  background: #0277ba; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #34ebf5; }
+  background: #2410a7; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #1c61da; }
+  background: #e25493; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #8da0d3; }
+  background: #1f2bc6; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #df4f29; }
+  background: #5d6253; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #faec0f; }
+  background: #f634fc; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #543793; }
+  background: #e2727b; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #50c6b1; }
+  background: #2eda06; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #965027; }
+  background: #2a5654; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #3d09a6; }
+  background: #b886cc; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #24fd24; }
+  background: #8856ee; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #478c5f; }
+  background: #8c0240; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #097f9f; }
+  background: #708822; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #9b65f2; }
+  background: #3f9936; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #ab5028; }
+  background: #d5d430; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #0ddd75; }
+  background: #4d21f7; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #076316; }
+  background: #47ebd8; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #c88f72; }
+  background: #78440d; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #e736ae; }
+  background: #65c192; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #beae4b; }
+  background: #c8f67b; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #80b134; }
+  background: #22233b; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #a56983; }
+  background: #befae4; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #0f21bf; }
+  background: #08380b; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #69e55c; }
+  background: #066458; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #dc1871; }
+  background: #3a3e05; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #e3e3d2; }
+  background: #8b027d; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #42321c; }
+  background: #44e9b0; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #fad22c; }
+  background: #8f5771; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #b8ae29; }
+  background: #663e03; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #a2e125; }
+  background: #2e34f6; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #6c0636; }
+  background: #780c3c; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #92a10c; }
+  background: #6e965e; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #624438; }
+  background: #0ba6ab; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #7a3b45; }
+  background: #2828de; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #bc77b7; }
+  background: #a6a421; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #80172c; }
+  background: #f70784; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #b5dd72; }
+  background: #5e99d3; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #d2e443; }
+  background: #71e1ec; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #fc7a9a; }
+  background: #2e2703; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #3e0d7a; }
+  background: #860bae; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #b94e9c; }
+  background: #53698a; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #48cd36; }
+  background: #d858c5; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #4ec90d; }
+  background: #ddd852; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #bc5cc7; }
+  background: #a82ad2; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #1d7bb5; }
+  background: #65b690; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #9cda1c; }
+  background: #354e37; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #fdde4c; }
+  background: #2ab81b; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #8276ab; }
+  background: #7e2d73; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #3facfc; }
+  background: #9f5731; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #2fc337; }
+  background: #eb38e9; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #ed1c82; }
+  background: #24945a; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #9b0fcd; }
+  background: #fa7121; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #eb899e; }
+  background: #441812; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #1b9d42; }
+  background: #69c85e; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #25392e; }
+  background: #d9c904; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #828a78; }
+  background: #019f23; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12511,7 +12511,7 @@ td .check-container {
 
 .field-section {
   background-color: #f4f4f4;
-  padding: 20px; }
+  padding: 20px 30px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
