--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #b81ef5; }
+  background: #882472; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #66f82f; }
+  background: #c1da17; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #fb3455; }
+  background: #bd7c14; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #267c64; }
+  background: #62d62d; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #8342f5; }
+  background: #de26e3; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #cabc1d; }
+  background: #b89c76; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #28bb6a; }
+  background: #0d8b8c; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #6b217b; }
+  background: #730eb7; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #4a8717; }
+  background: #513fd7; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #bf1af9; }
+  background: #80c515; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #ba76b4; }
+  background: #cfd1b3; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #a1d77e; }
+  background: #d6f64a; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #b19c4f; }
+  background: #4d6679; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #ac599f; }
+  background: #de7f48; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #cfd6e3; }
+  background: #3d1dc7; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #1b8269; }
+  background: #87aeda; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #60fed6; }
+  background: #5e560d; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #012276; }
+  background: #1f576b; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #0edb53; }
+  background: #95f566; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #275dda; }
+  background: #3006a4; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #b0be43; }
+  background: #62f086; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #0aea0a; }
+  background: #794867; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #936e50; }
+  background: #72786b; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #d5df5a; }
+  background: #b74a51; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #8cf199; }
+  background: #32608d; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #603a9d; }
+  background: #5c87b0; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #8ce65e; }
+  background: #c13942; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #52ae73; }
+  background: #99ff12; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #115c3d; }
+  background: #0dceae; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #a857b3; }
+  background: #b0e274; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #4a0bad; }
+  background: #028b43; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #6391f4; }
+  background: #c0df64; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #473cda; }
+  background: #3505e2; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #4d70c4; }
+  background: #e505b7; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #0b24e8; }
+  background: #6e79aa; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #ce475e; }
+  background: #0f8443; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #6640ab; }
+  background: #cbabf1; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #92a634; }
+  background: #6fb046; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #ee4a36; }
+  background: #70c80a; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #297840; }
+  background: #959ec5; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #d83352; }
+  background: #7b943e; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #93a14f; }
+  background: #cfc1cd; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #fb0827; }
+  background: #95de41; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #1c9640; }
+  background: #d98e3a; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #0277ba; }
+  background: #a66530; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #2410a7; }
+  background: #3dfe99; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #e25493; }
+  background: #3d6702; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #1f2bc6; }
+  background: #df5627; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #5d6253; }
+  background: #f67a9a; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #f634fc; }
+  background: #af5e58; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #e2727b; }
+  background: #7241b8; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #2eda06; }
+  background: #7f9962; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #2a5654; }
+  background: #12dc47; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #b886cc; }
+  background: #736c56; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #8856ee; }
+  background: #49e46e; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #8c0240; }
+  background: #cbe157; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #708822; }
+  background: #fd5bd9; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #3f9936; }
+  background: #cd3694; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #d5d430; }
+  background: #fff36b; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #4d21f7; }
+  background: #e22bfe; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #47ebd8; }
+  background: #a68cbc; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #78440d; }
+  background: #d93a86; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #65c192; }
+  background: #fd3b8f; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #c8f67b; }
+  background: #f19cb6; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #22233b; }
+  background: #b68115; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #befae4; }
+  background: #668d05; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #08380b; }
+  background: #05bd70; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #066458; }
+  background: #5fd1a5; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #3a3e05; }
+  background: #20c989; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #8b027d; }
+  background: #8753ab; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #44e9b0; }
+  background: #2e9544; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #8f5771; }
+  background: #1725c7; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #663e03; }
+  background: #41ac12; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #2e34f6; }
+  background: #4455c6; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #780c3c; }
+  background: #585cd1; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #6e965e; }
+  background: #3a22ff; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #0ba6ab; }
+  background: #494804; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #2828de; }
+  background: #b07b63; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #a6a421; }
+  background: #eabf7e; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #f70784; }
+  background: #b2bc1e; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #5e99d3; }
+  background: #45e51d; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #71e1ec; }
+  background: #40939c; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #2e2703; }
+  background: #fac129; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #860bae; }
+  background: #351403; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #53698a; }
+  background: #6951e0; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #d858c5; }
+  background: #da9dc6; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #ddd852; }
+  background: #252446; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #a82ad2; }
+  background: #de923a; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #65b690; }
+  background: #f7eecb; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #354e37; }
+  background: #2fd738; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #2ab81b; }
+  background: #964f0d; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #7e2d73; }
+  background: #2a3a8d; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #9f5731; }
+  background: #4ce072; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #eb38e9; }
+  background: #3ab6ea; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #24945a; }
+  background: #0bf741; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #fa7121; }
+  background: #a21c95; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #441812; }
+  background: #e5ffd4; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #69c85e; }
+  background: #5c47a6; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #d9c904; }
+  background: #a8a101; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #019f23; }
+  background: #f6ea93; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11432,8 +11432,8 @@ input:checked + .sliders:before {
   background: #70ff03;
   border-radius: 100%;
   display: block;
-  width: 14px;
-  height: 14px;
+  width: 10px;
+  height: 10px;
   margin-left: 6px; }
 
 .c-red {
@@ -11441,8 +11441,8 @@ input:checked + .sliders:before {
   background: #f00f00;
   border-radius: 100%;
   display: block;
-  width: 14px;
-  height: 14px;
+  width: 10px;
+  height: 10px;
   margin-left: 6px; }
 
 .c-orange {
@@ -11450,8 +11450,17 @@ input:checked + .sliders:before {
   background: #ff8003;
   border-radius: 100%;
   display: block;
-  width: 14px;
-  height: 14px;
+  width: 10px;
+  height: 10px;
+  margin-left: 6px; }
+
+.c-gray {
+  padding: 6px;
+  background: #808080;
+  border-radius: 100%;
+  display: block;
+  width: 10px;
+  height: 10px;
   margin-left: 6px; }
 
 .table-icon {
@@ -12513,6 +12522,95 @@ td .check-container {
   background-color: #f4f4f4;
   padding: 20px 30px; }
 
+.notification-dropdow-div {
+  min-width: auto !important;
+  border: 0px solid rgba(0, 0, 0, 0.15);
+  height: 300px; }
+
+.dropdown-menu1 {
+  top: 8px;
+  right: -34px;
+  left: unset;
+  width: 430px;
+  box-shadow: 0px 5px 7px -1px #c1c1c1;
+  padding-bottom: 0px;
+  padding: 0px;
+  position: absolute; }
+
+.notifi-scroll {
+  height: 280px;
+  overflow-y: auto; }
+
+.dropdown-menu1:before {
+  content: "";
+  position: absolute;
+  top: -20px;
+  right: 12px;
+  border: 10px solid #56bcd9;
+  border-color: transparent transparent #56bcd9 transparent; }
+
+.head {
+  padding: 10px 15px;
+  border-radius: 3px 3px 0px 0px;
+  background: #56bcd9; }
+
+.notification-box {
+  background: #fff;
+  padding: 10px; }
+  .notification-box .row-info {
+    align-items: center;
+    display: flex;
+    justify-content: space-between; }
+
+.flex-1 {
+  flex: 1;
+  margin: 0px 10px;
+  cursor: pointer; }
+  .flex-1 .text-info {
+    color: #000 !important;
+    font-size: 14px; }
+  .flex-1 .subline-text {
+    font-size: 13px; }
+
+.notification-box-gray {
+  color: #8c8c8c !important; }
+  .notification-box-gray .text-info,
+  .notification-box-gray .subline-text {
+    color: #8c8c8c !important; }
+
+.footer {
+  padding: 5px 15px;
+  border-radius: 0px 0px 3px 3px; }
+
+.notification-red-circle {
+  background: #f00f00;
+  color: #fff;
+  padding: 3px 6px;
+  border-radius: 100%;
+  font-size: 13px;
+  border: 1px solid white;
+  position: absolute;
+  right: 5px;
+  top: -5px; }
+
+.bg-gray {
+  background-color: #eee; }
+
+@media (max-width: 640px) {
+  .dropdown-menu1 {
+    top: 50px;
+    left: -16px;
+    width: 290px; }
+
+  .nav {
+    display: block; }
+
+  .nav .nav-item,
+  .nav .nav-item a {
+    padding-left: 0px; }
+
+  .message {
+    font-size: 13px; } }
 @media screen and (max-width: 767px) {
   .profile-box {
     padding: 10px; }
