--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #882472; }
+  background: #fa9976; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #c1da17; }
+  background: #876e46; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #bd7c14; }
+  background: #750668; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #62d62d; }
+  background: #88a9fe; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #de26e3; }
+  background: #3f7fd5; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #b89c76; }
+  background: #f772af; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #0d8b8c; }
+  background: #f29dc8; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #730eb7; }
+  background: #dbec21; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #513fd7; }
+  background: #581e1e; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #80c515; }
+  background: #3b0ffe; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #cfd1b3; }
+  background: #9c030d; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #d6f64a; }
+  background: #a022ea; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #4d6679; }
+  background: #1ea50e; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #de7f48; }
+  background: #29e2ba; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #3d1dc7; }
+  background: #dd05df; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #87aeda; }
+  background: #6aa45e; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #5e560d; }
+  background: #2c382a; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #1f576b; }
+  background: #44a426; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #95f566; }
+  background: #032332; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #3006a4; }
+  background: #cfc98a; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #62f086; }
+  background: #84f62c; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #794867; }
+  background: #7d2bc3; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #72786b; }
+  background: #65a003; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #b74a51; }
+  background: #321703; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #32608d; }
+  background: #92aa09; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #5c87b0; }
+  background: #c68bf8; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #c13942; }
+  background: #66a3b7; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #99ff12; }
+  background: #2f8bd5; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #0dceae; }
+  background: #ddbe82; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #b0e274; }
+  background: #55216f; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #028b43; }
+  background: #e1c789; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #c0df64; }
+  background: #d3510c; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #3505e2; }
+  background: #34d2c9; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #e505b7; }
+  background: #fa8f0d; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #6e79aa; }
+  background: #4a2aaa; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #0f8443; }
+  background: #e452d4; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #cbabf1; }
+  background: #074768; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #6fb046; }
+  background: #72573c; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #70c80a; }
+  background: #071e4b; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #959ec5; }
+  background: #df67bb; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #7b943e; }
+  background: #a4bcd2; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #cfc1cd; }
+  background: #936217; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #95de41; }
+  background: #5bb692; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #d98e3a; }
+  background: #a14d35; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #a66530; }
+  background: #0666f9; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #3dfe99; }
+  background: #d6b0ff; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #3d6702; }
+  background: #7bf7ee; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #df5627; }
+  background: #1699cc; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #f67a9a; }
+  background: #9e0d24; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #af5e58; }
+  background: #b05389; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #7241b8; }
+  background: #0ff984; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #7f9962; }
+  background: #14251a; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #12dc47; }
+  background: #12099e; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #736c56; }
+  background: #7454b5; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #49e46e; }
+  background: #b34fe8; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #cbe157; }
+  background: #ed7c91; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #fd5bd9; }
+  background: #18f5d1; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #cd3694; }
+  background: #205cde; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #fff36b; }
+  background: #2c962c; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #e22bfe; }
+  background: #4b5f17; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #a68cbc; }
+  background: #921ad7; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #d93a86; }
+  background: #f7ec08; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #fd3b8f; }
+  background: #ca420e; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #f19cb6; }
+  background: #136bb3; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #b68115; }
+  background: #ad0add; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #668d05; }
+  background: #ce2ad6; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #05bd70; }
+  background: #d130db; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #5fd1a5; }
+  background: #b12e84; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #20c989; }
+  background: #affd39; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #8753ab; }
+  background: #dda0eb; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #2e9544; }
+  background: #a50757; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #1725c7; }
+  background: #4ad234; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #41ac12; }
+  background: #9aa497; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #4455c6; }
+  background: #16cd84; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #585cd1; }
+  background: #a95f58; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #3a22ff; }
+  background: #b8e7f8; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #494804; }
+  background: #b3499f; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #b07b63; }
+  background: #01094f; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #eabf7e; }
+  background: #7cfa75; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #b2bc1e; }
+  background: #c0a4af; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #45e51d; }
+  background: #3e975b; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #40939c; }
+  background: #95f6ec; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #fac129; }
+  background: #69fba4; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #351403; }
+  background: #31fb82; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #6951e0; }
+  background: #1e101f; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #da9dc6; }
+  background: #7949ee; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #252446; }
+  background: #2648c6; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #de923a; }
+  background: #7bcd75; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #f7eecb; }
+  background: #45b302; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #2fd738; }
+  background: #a0e312; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #964f0d; }
+  background: #d2ce32; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #2a3a8d; }
+  background: #c5eeac; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #4ce072; }
+  background: #8546fd; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #3ab6ea; }
+  background: #87a7b3; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #0bf741; }
+  background: #b65b0f; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #a21c95; }
+  background: #e976aa; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #e5ffd4; }
+  background: #cd29ab; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #5c47a6; }
+  background: #b7d139; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #a8a101; }
+  background: #4df968; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #f6ea93; }
+  background: #e4f777; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12576,7 +12576,7 @@ td .check-container {
   color: #8c8c8c !important; }
   .notification-box-gray .text-info,
   .notification-box-gray .subline-text {
-    color: #8c8c8c !important; }
+    color: #808080 !important; }
 
 .footer {
   padding: 5px 15px;
