--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -2192,6 +2192,10 @@ td {
   padding: 10px 15px;
   border-radius: 3px 3px 0px 0px;
   background: #56bcd9;
+
+  a {
+    margin: 0px;
+  }
 }
 
 .notification-box {
