--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #fa9976; }
+  background: #36b61e; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #876e46; }
+  background: #a16f83; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #750668; }
+  background: #0d655a; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #88a9fe; }
+  background: #9bc7fc; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #3f7fd5; }
+  background: #8ba43d; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #f772af; }
+  background: #92cdae; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #f29dc8; }
+  background: #45cd12; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #dbec21; }
+  background: #7de1b2; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #581e1e; }
+  background: #a62a70; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #3b0ffe; }
+  background: #9fe16b; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #9c030d; }
+  background: #5d9c25; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #a022ea; }
+  background: #70aa7c; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #1ea50e; }
+  background: #c10db2; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #29e2ba; }
+  background: #ec7cfd; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #dd05df; }
+  background: #56515c; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #6aa45e; }
+  background: #ee7189; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #2c382a; }
+  background: #1910fd; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #44a426; }
+  background: #cd015e; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #032332; }
+  background: #815242; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #cfc98a; }
+  background: #e7499c; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #84f62c; }
+  background: #4e40b1; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #7d2bc3; }
+  background: #81dd07; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #65a003; }
+  background: #2957b9; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #321703; }
+  background: #b54d1e; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #92aa09; }
+  background: #a8f9bd; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #c68bf8; }
+  background: #ef5701; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #66a3b7; }
+  background: #c3bc85; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #2f8bd5; }
+  background: #647ba2; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #ddbe82; }
+  background: #796a5f; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #55216f; }
+  background: #b5f6a1; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #e1c789; }
+  background: #931ada; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #d3510c; }
+  background: #4cbdc1; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #34d2c9; }
+  background: #f9de3c; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #fa8f0d; }
+  background: #8e9cf8; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #4a2aaa; }
+  background: #706999; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #e452d4; }
+  background: #ed24dd; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #074768; }
+  background: #8378c1; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #72573c; }
+  background: #8bc864; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #071e4b; }
+  background: #b2ddea; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #df67bb; }
+  background: #5cad81; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #a4bcd2; }
+  background: #67483f; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #936217; }
+  background: #287678; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #5bb692; }
+  background: #1951d0; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #a14d35; }
+  background: #11453b; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #0666f9; }
+  background: #664bed; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #d6b0ff; }
+  background: #ac7cd3; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #7bf7ee; }
+  background: #673a79; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #1699cc; }
+  background: #d1fccb; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #9e0d24; }
+  background: #b5db69; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #b05389; }
+  background: #60428e; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #0ff984; }
+  background: #2682b2; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #14251a; }
+  background: #d757e5; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #12099e; }
+  background: #f049f5; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #7454b5; }
+  background: #545beb; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #b34fe8; }
+  background: #8ed493; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #ed7c91; }
+  background: #b13ae5; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #18f5d1; }
+  background: #3165d8; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #205cde; }
+  background: #887d97; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #2c962c; }
+  background: #c8ab39; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #4b5f17; }
+  background: #fb8cc7; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #921ad7; }
+  background: #52b236; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #f7ec08; }
+  background: #6baec9; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #ca420e; }
+  background: #492238; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #136bb3; }
+  background: #780ef4; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #ad0add; }
+  background: #41262a; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #ce2ad6; }
+  background: #b51844; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #d130db; }
+  background: #7497b9; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #b12e84; }
+  background: #052209; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #affd39; }
+  background: #2f2161; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #dda0eb; }
+  background: #c89fe3; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #a50757; }
+  background: #36ce77; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #4ad234; }
+  background: #06a419; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #9aa497; }
+  background: #212e70; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #16cd84; }
+  background: #dcb13e; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #a95f58; }
+  background: #fad052; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #b8e7f8; }
+  background: #0586ed; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #b3499f; }
+  background: #3b2534; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #01094f; }
+  background: #d4d37d; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #7cfa75; }
+  background: #417729; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #c0a4af; }
+  background: #d9cd26; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #3e975b; }
+  background: #42fa79; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #95f6ec; }
+  background: #3f5487; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #69fba4; }
+  background: #6fcd2c; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #31fb82; }
+  background: #8da814; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #1e101f; }
+  background: #b0ced4; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #7949ee; }
+  background: #bf887b; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #2648c6; }
+  background: #d6dcce; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #7bcd75; }
+  background: #b9ffb1; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #45b302; }
+  background: #a332d9; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #a0e312; }
+  background: #19eb7a; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #d2ce32; }
+  background: #6dc666; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #c5eeac; }
+  background: #29ba9d; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #8546fd; }
+  background: #ec029c; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #87a7b3; }
+  background: #7f50e7; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #b65b0f; }
+  background: #90036e; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #e976aa; }
+  background: #34476b; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #cd29ab; }
+  background: #10aff2; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #b7d139; }
+  background: #3c4cd4; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #4df968; }
+  background: #94c65d; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #e4f777; }
+  background: #7028c9; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12553,6 +12553,8 @@ td .check-container {
   padding: 10px 15px;
   border-radius: 3px 3px 0px 0px;
   background: #56bcd9; }
+  .head a {
+    margin: 0px; }
 
 .notification-box {
   background: #fff;
